--- a/api/package.json
+++ b/api/package.json
@@ -12,6 +12,7 @@
     "body-parser": "^1.18.1",
     "cors": "^2.8.4",
     "express": "^4.15.4",
+    "express-ws": "^3.0.0",
     "mongoose": "^4.11.12",
     "node-json-db": "^0.7.3"
   },
