--- a/container/package.json
+++ b/container/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "serialport": "^6.0.4"
+    "serialport": "^6.0.4",
+    "websocket": "^1.0.25"
   }
 }
